# Projects

./: app.py
.devcontainer/: devcontainer.json
Enhanced Account Intelligence App/: README.md
google-analytics4-mcp-tool/: README.md  pyproject.toml
google-analytics4-mcp-tool/src/: index.py
voice_bot/: main.py  packages.txt  requirements.txt
